styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* END OF CSS RESET */

@font-face {
	font-family: "Roboto-Regular";
	font-weight: normal;
	src: url(./fonts/Roboto-Regular.ttf)
}

@font-face {
	font-family: "Roboto-Bold";
	font-weight: bold;
	src: url(./fonts/Roboto-Bold.ttf)
}

@font-face {
	font-family: "Roboto-Thin";
	font-weight: 100;
	src: url(./fonts/Roboto-Thin.ttf)
}

:root {
	font-family: "Roboto-Regular";
}

.container {
	display: grid;
	grid-template-columns: 1fr 3fr;
	height: 100vh;
}

.dashboard {
	display: grid;
	grid-template-rows: 3rem 0.3fr 0.15fr;
	gap: 50px;
	font-family: "Roboto-Bold", "Times New Roman", Times, serif;
	background-color: royalblue;
	color: white;
	padding-left: 40px;
}

.dashboard img {
	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
}


.dashboard-header {
	display: grid;
	grid-template-columns: 40px 1fr;
	align-items: center;
	gap: 20px;
	font-size: 2rem;
	position: relative;
	top: 20px;
}

.dashboard-header > img {
	width: 40px;
}

.dashboard-list {
	display: grid;
	gap: 20px;
}

.dashboard-list > li {
    display: grid;
    grid-template-columns: 20px 1fr;
    align-items: center;
    gap: inherit;
}

.dashboard-list > li > img {
	width: 20px;
}

